# THS_Spider

./: .gitignore  THSspider_LKX.py  pyproject.toml
.gitea/workflows/: THS_LKX.yml
.github/workflows/: THS_LKX.yml
THSspider_LKX/: DataToSeatable.py
